perf🚀: 优化 Release Info 生成机制, 不再使用 git cliff, 通过自定义 py 脚本实现

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -237,22 +237,34 @@ jobs:
     name: Generate changelog
     runs-on: ubuntu-latest
     outputs:
-      release_body: ${{ steps.git-cliff.outputs.content }}
+      release_body: ${{ steps.generate-changelog.outputs.content }}
     steps:
       - name: Checkout
         uses: actions/checkout@v6
         with:
           fetch-depth: 0
 
-      - name: Generate a changelog
-        uses: orhun/git-cliff-action@v4
-        id: git-cliff
+      - name: Setup Python
+        uses: actions/setup-python@v6
         with:
-          config: .github/cliff.toml
-          args: -vv --latest --strip header
+          python-version: '3.13'
+
+      - name: Generate changelog with Python script
+        id: generate-changelog
         env:
-          OUTPUT: CHANGES.md
-          GITHUB_REPO: ${{ github.repository }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # 生成最新版本的 changelog
+          python scripts/generate_changelog.py --latest > CHANGES.md
+          
+          # 将内容输出到 GitHub Actions output
+          {
+            echo 'content<<EOF'
+            cat CHANGES.md
+            echo EOF
+          } >> "$GITHUB_OUTPUT"
+          
+          echo "✅ Changelog 已生成"
 
   release:
     if: ${{ needs.meta.outputs.is_release == 'true' }}
