perf🚀: 优化 CHANGELOG 生成逻辑, 添加本地昵称用户名映射

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -53,6 +53,17 @@
             "env": {
                 "PYTHONPATH": "${workspaceFolder}"
             }
+        },
+        {
+            "name": "生成完整 changelog",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/scripts/generate_changelog.py",
+            "console": "integratedTerminal",
+            "args": [
+                "--output",
+                "${workspaceFolder}/CHANGELOG.md"
+            ]
         }
     ]
 }
