--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -111,7 +111,7 @@ jobs:
           repository: MaaXYZ/MaaFramework
           fileName: "MAA-${{ matrix.platform }}-${{ matrix.arch }}*"
           # 下载指定的 Release Tag
-          tag: v5.2.6
+          tag: v5.3.0-beta.5
           out-file-path: "deps"
           extract: true
 
@@ -121,7 +121,7 @@ jobs:
         with:
           repository: SweetSmellFox/MFAAvalonia
           # 使用固定版本
-          ref: v2.2.4
+          ref: v2.2.5
           path: MFA-src
           fetch-depth: 1
 
