--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "loguru>=0.7.3",
-    "maafw==5.2.6",
+    "maafw==5.3.0-beta.5",
     "pip>=25.3",
     "pre-commit>=4.5.0",
     "rapidfuzz>=3.14.3",
