chore🔧: 更新BUG反馈的模板

--- a/.github/ISSUE_TEMPLATE/cn-bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/cn-bug-report.yaml
@@ -42,6 +42,7 @@ body:
         **请在关闭 MXX 后，上传以下 3 个文件：**
           1. `debug` 文件夹中的 `maa.log` `maa.bak.log` 日志文件，并说明问题出现的大致时间点
           2. `config` 文件夹中的 `maa_pi_config.json`(MaaPiCli) 配置文件
+          3. `logs`文件夹中的 `log-xxxxxxxx.log` 日志文件，选择离出现问题时间点的最近时间的日志
 
         如果你在使用 MacBook，请点击屏幕左上角的“文件”，点击“打开日志文件夹”
         **请直接将完整的文件拖拽进来，而非自己裁切或复制的片段；若文件体积过大可压缩后再上传**
