--- a/.github/ISSUE_TEMPLATE/en-bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/en-bug-report.yaml
@@ -56,6 +56,7 @@ body:
         **After closing MXX, upload the following 3 files:**
           1. The `maa.log` and `maa.bak.log` log file in the `debug` folder, and indicate the approximate point in time when the problem occurred.
           2. The `maa_pi_config.json`(MaaPiCli) config file in the `config` folder
+          3. The `log-xxxxxxxx.log` log file in the `logs` folder, select the log file closest to the time of the problem occurrence.
 
         If you are using MacBook, please click the "File" option in the top-left corner of the screen, then click "Open Log Folder".
         **Please drag and drop the full file in, not your own cuttings or copies;**
